--- a/roles/api_add_linux/tasks/api.create.key.yml
+++ b/roles/api_add_linux/tasks/api.create.key.yml
@@ -1,7 +1,7 @@
 ---
 # tasks for api_zabbix create hosts .
 # -------------------------------------------------------------------------------------------#
-- name: Criar diretorio chave PSK
+- name: Criar diretorio chave PSK - {{ ansible_distribution }}/{{ ansible_all_ipv4_addresses[0]}}.
   file:
     path: /etc/zabbix/keys
     owner: zabbix
