--- a/roles/zabbix_db/tasks/db.yml
+++ b/roles/zabbix_db/tasks/db.yml
@@ -3,14 +3,14 @@
 # https://docs.ansible.com/ansible/latest/collections/community/mysql/index.html
 
 # -----------------------------------------------------#
-- name: Instalando Banco de Dados - {{ ansible_distribution }}/{{ ansible_all_ipv4_addresses[0]}}.
+- name: Instalando Banco de Dados 
   dnf:
     name: "{{ packages_mysql }}"
     state: latest
   tags: zabbix_mydb
   when: ansible_distribution_file_variety == "RedHat"
 #----------------------------------------------------#
-- name: Remover Pacotes Desnecessarios - {{ zbx_db }}.
+- name: Remover Pacotes Desnecessarios
   dnf:
     name: mariadb-libs
     state: removed
@@ -18,16 +18,15 @@
   when: ansible_facts['distribution_major_version'] == "8" or ansible_distribution_file_variety == "RedHat"
   
 # ----------------------------------------------------#
-- name: Habilitando na Inicialização Service MYSQL - {{ zbx_db }}
+- name: Habilitando na Inicialização Service MYSQL
   systemd:
     name: mysqld
     state: started
     enabled: yes
   tags: zabbix_mydb
   when: ansible_facts['distribution_major_version'] == "8"
-  
 #---------------------------------------------------------------------#
-- name: Criar senha de Root no banco de Dados - {{ zbx_db }}
+- name: Criar senha de Root no banco de Dados
   mysql_user:
     name: root
     password: "{{ root_pass }}"
@@ -37,7 +36,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #----------------------------------------------------------------------#
-- name: Copiando Arquivo .my.cnf default - {{ zbx_db }}
+- name: Copiando Arquivo .my.cnf default
   copy: 
     src: "{{ item.src }}" 
     dest: "{{ item.dest }}"
@@ -48,7 +47,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #-------------------------------------------------------------------------# 
-- name: Removendo contas de usuários 'anônimos' para localhost - {{ zbx_db }}
+- name: Removendo contas de usuários 'anônimos' para localhost
   mysql_user:
     name: ''
     host_all: yes
@@ -60,7 +59,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #---------------------------------------------------#
-- name: Removendo usuários 'zabbix' para o localhost se existir - {{ zbx_db }}
+- name: Removendo usuários 'zabbix' para o localhost se existir
   mysql_user:
     name: "{{ db_user_zabbix }}"
     host: localhost
@@ -72,7 +71,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #--------------------------------------------------------#
-- name: Removendo o MySQL 'test database' - {{ zbx_db }}
+- name: Removendo o MySQL 'test database'
   mysql_db:
     name: '{{ database_remove }}'
     state: absent
@@ -82,19 +81,19 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #------------------------------#
-- name: Altera o plugin de autenticação do usuário 'root' do MYSQL para mysql_native_password - {{ zbx_db }}
+- name: Altera o plugin de autenticação do usuário 'root' do MYSQL para mysql_native_password
   shell: mysql -u root -p"{{ root_pass }}" -e 'UPDATE mysql.user SET plugin="mysql_native_password" WHERE user="root" AND host="localhost"'
   tags: zabbix_mydb
   when: ansible_facts['distribution_major_version'] == "8"
   
 #------------------------------------------------------------#
-- name: Privilégios de liberação para usuário 'root' - {{ zbx_db }}
+- name: Privilégios de liberação para usuário 'root'
   shell: mysql -u root -p"{{ root_pass }}" -e 'FLUSH PRIVILEGES'
   tags: zabbix_mydb
   when: ansible_facts['distribution_major_version'] == "8"
   
 #-----------------------------------------------------------------#  
-- name: Criando usuário 'zabbix' para o MYSQL - {{ zbx_db }}
+- name: Criando usuário 'zabbix' para o MYSQL
   mysql_user:
     name: "{{ db_user_zabbix }}"
     password: zabbix
@@ -107,7 +106,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #------------------------------------------#
-- name: Criando usuário 'zabbix_server' para o MYSQL - {{ zbx_db }}
+- name: Criando usuário 'zabbix_server' para o MYSQL
   mysql_user:
     name: "{{ db_user_server }}"
     password: "{{ db_user_pass_server }}"
@@ -122,7 +121,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #---------------------------------------------#
-- name: Criando usuário 'zabbix_web' para o MYSQL - {{ zbx_db }}
+- name: Criando usuário 'zabbix_web' para o MYSQL
   mysql_user:
     name: "{{ db_user_web }}"
     password: "{{ db_user_pass_web }}"
@@ -136,7 +135,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
 
 #-----------------------------------------------------------#
-- name: Criando usuário 'zabbixmonitdb' para Monitorar o Banco - {{ zbx_db }}
+- name: Criando usuário 'zabbixmonitdb' para Monitorar o Banco
   mysql_user:
     name: "{{ db_user_monit_db }}"
     password: "{{ db_user_pass_db }}"
@@ -144,15 +143,15 @@
     login_user: root
     login_password: "{{ root_pass }}"
     state: present
-    host: '192.168.3.130'
+    host: '%'
   no_log: true
   tags: zabbix_mydb
   when: ansible_facts['distribution_major_version'] == "8"
 
 #-----------------------------------------------------------#
-- name: Criando banco de dados com nome 'zabbix' - {{ zbx_db }}
+- name: Criando banco de dados com nome 'dbzabbix'
   mysql_db:
-    name: "{{ db_user_zabbix }}"
+    name: "{{ db_name }}"
     login_host: localhost
     login_user: 'root'
     login_password: '{{ root_pass }}'
@@ -163,7 +162,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #----------------------------------------------------------------#
-- name: Habilitando Portas Zabbix_Server/Zabbix_Agent2 - {{ zbx_db }}
+- name: Habilitando Portas Zabbix_Server/Zabbix_Agent2
   firewalld:
     port: "{{ item }}"
     permanent: yes
@@ -176,7 +175,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
   
 #-------------------------------------------------------------------------#
-- name: Realizando Reload no Firewall - {{ zbx_db }}
+- name: Realizando Reload no Firewall
   systemd:
     name: firewalld
     state: reloaded
