--- a/roles/zabbix_proxy/vars/main.yml
+++ b/roles/zabbix_proxy/vars/main.yml
@@ -1,10 +1,15 @@
 ---
 # vars file for zabbix-proxy
 
-url_packages_zabbix: http://repo.zabbix.com/zabbix/5.5/rhel/8/x86_64/zabbix-release-5.5-1.el8.noarch.rpm
-
 # VARIAVEL HOSTNAME DO ZABBIX PROXY
  
-# PACOTES DE INSTALL PROXY
-packages_zabbix_proxy: zabbix-proxy-sqlite3
+# packages install zabbix proxy
+packages_zabbix_proxy: 
+    - zabbix-proxy-sqlite3
+    - perl-Sys-Syslog
+    - net-snmp-perl
+    - net-snmp-utils
+    - net-snmp
+    - libaio-devel
+    - libnsl
 packages_zabbix_agent: zabbix-agent2
